[ARM] msm: add keypad for halibut board
Signed-off-by: Brian Swetland <swetland@google.com>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -20,4 +20,4 @@ obj-$(CONFIG_PM) += pm.o
 obj-$(CONFIG_MSM_CPU_FREQ_SCREEN) += cpufreq.o
 
 
-obj-$(CONFIG_MACH_HALIBUT) += board-halibut.o
+obj-$(CONFIG_MACH_HALIBUT) += board-halibut.o board-halibut-keypad.o
