usb_function: adb transport driver
Provides transport for the Android Debug Bridge protocol.

Signed-off-by: Brian Swetland <swetland@google.com>

usb_function: adb: support unbinding

adb: Enable adb function only when the android_adb device file is open.

Signed-off-by: Brian Swetland <swetland@google.com>

usb_function: adb: Enable function when /dev/android_adb_enable is opened.

Signed-off-by: Mike Lockwood <lockwood@android.com>

--- a/drivers/usb/function/Kconfig
+++ b/drivers/usb/function/Kconfig
@@ -30,4 +30,8 @@ config USB_FUNCTION_LOOPBACK
 	boolean "Loopback Function -- returns packets"
 	depends on USB_FUNCTION
 
+config USB_FUNCTION_ADB
+	boolean "ADB Transport Function"
+	depends on USB_FUNCTION
+
 endmenu
