--- a/drivers/usb/function/Makefile
+++ b/drivers/usb/function/Makefile
@@ -3,3 +3,4 @@ obj-$(CONFIG_USB_FUNCTION_MSM_HSUSB)	+= msm_hsusb.o
 obj-$(CONFIG_USB_FUNCTION_NULL)		+= null.o
 obj-$(CONFIG_USB_FUNCTION_NULL)		+= zero.o
 obj-$(CONFIG_USB_FUNCTION_LOOPBACK)	+= loopback.o
+obj-$(CONFIG_USB_FUNCTION_ADB)		+= adb.o
