usb_function: userspace mass storage function
Signed-off-by: Brian Swetland <swetland@google.com>

ums: Fix for writing zero length packets.

Signed-off-by: Brian Swetland <swetland@google.com>

usb_function: ums: Fix uninitialized spinlock lock

Signed-off-by: San Mehat <san@android.com>

--- a/drivers/usb/function/Kconfig
+++ b/drivers/usb/function/Kconfig
@@ -34,4 +34,8 @@ config USB_FUNCTION_ADB
 	boolean "ADB Transport Function"
 	depends on USB_FUNCTION
 
+config USB_FUNCTION_UMS
+	boolean "USB Mass Storage Function"
+	depends on USB_FUNCTION
+
 endmenu
