--- a/drivers/usb/function/Makefile
+++ b/drivers/usb/function/Makefile
@@ -4,3 +4,4 @@ obj-$(CONFIG_USB_FUNCTION_NULL)		+= null.o
 obj-$(CONFIG_USB_FUNCTION_NULL)		+= zero.o
 obj-$(CONFIG_USB_FUNCTION_LOOPBACK)	+= loopback.o
 obj-$(CONFIG_USB_FUNCTION_ADB)		+= adb.o
+obj-$(CONFIG_USB_FUNCTION_UMS)		+= ums.o
