usb_function: diag function driver
Used to route the MSM7K DIAG packets between the A9 (via SMD) and USB.

Signed-off-by: Brian Swetland <swetland@google.com>

usb_function: diag: use new smd_open() api.

Signed-off-by: Brian Swetland <swetland@google.com>

--- a/drivers/usb/function/Kconfig
+++ b/drivers/usb/function/Kconfig
@@ -38,4 +38,8 @@ config USB_FUNCTION_UMS
 	boolean "USB Mass Storage Function"
 	depends on USB_FUNCTION
 
+config USB_FUNCTION_DIAG
+	boolean "USB MSM7K Diag Function"
+	depends on USB_FUNCTION
+
 endmenu
