usb_function: ether: add cdc_subset ethernet function
This function provides the bulk-only cdc_subset usb ethernet
functionality that Linux supports.

Signed-off-by: Brian Swetland <swetland@google.com>

--- a/drivers/usb/function/Kconfig
+++ b/drivers/usb/function/Kconfig
@@ -42,4 +42,8 @@ config USB_FUNCTION_DIAG
 	boolean "USB MSM7K Diag Function"
 	depends on USB_FUNCTION
 
+config USB_FUNCTION_ETHER
+	boolean "USB Ethernet Function"
+	depends on USB_FUNCTION
+
 endmenu
