usb_function: Add mass_storage USB function driver.
USB mass storage implementation based on the file_storage gadget driver.

Signed-off-by: Brian Swetland <swetland@google.com>

usb_function: mass_storage: Disable "prevent medium removal" check

We must always be able to close the backing store file when the media
is removed.  Otherwise, the MMC layer will not be able to create the
block device file when the SD card is reinserted.

Signed-off-by: Brian Swetland <swetland@google.com>

usb_function: mass_storage: Hold a suspend_lock when mass storage is active.

Signed-off-by: Brian Swetland <swetland@google.com>

usb_function: mass_storage: Cleanup handling of configuration changes.

Fixes a bad interaction with the adb function driver.

Signed-off-by: Brian Swetland <swetland@google.com>

mass_storage:  Simplify MODE_SENSE implementation to avoid Vista problem.

Signed-off-by: Mike Lockwood <lockwood@android.com>

usb_function: mass_storage: Remove zero length packets and fix do_mode_sense.

Fixes problems with USB mass storage on older versions of MacOS.

Signed-off-by: Mike Lockwood <lockwood@android.com>

usb_function: mass_storage: Fix race condition during USB disconnect.

fsync_sub() dereferenced a NULL pointer because userspace closed
the backing store file at a bad time.

Signed-off-by: Mike Lockwood <lockwood@android.com>

usb_function: ums: When closing the backing file, force a sync and drop the pagecache

Signed-off-by: San Mehat <san@android.com>

mass_storage: remove calls to drop_pagecache and drop_slab so it compiles on 2.6.27

usb_function: mass_storage: Use spin_lock_irqsave/spin_unlock_irqrestore

The old code did not allways disable interrupts when called from thread
context, but tried to lock the same spinlock from interrupt context.

Signed-off-by: Arve Hjønnevåg <arve@androidom>

--- a/drivers/usb/function/Kconfig
+++ b/drivers/usb/function/Kconfig
@@ -35,7 +35,11 @@ config USB_FUNCTION_ADB
 	depends on USB_FUNCTION
 
 config USB_FUNCTION_UMS
-	boolean "USB Mass Storage Function"
+	boolean "USB Mass Storage Function (userspace)"
+	depends on USB_FUNCTION
+
+config USB_FUNCTION_MASS_STORAGE
+	boolean "USB Mass Storage Function (kernel based)"
 	depends on USB_FUNCTION
 
 config USB_FUNCTION_DIAG
