--- a/drivers/usb/function/Makefile
+++ b/drivers/usb/function/Makefile
@@ -5,5 +5,6 @@ obj-$(CONFIG_USB_FUNCTION_NULL)		+= zero.o
 obj-$(CONFIG_USB_FUNCTION_LOOPBACK)	+= loopback.o
 obj-$(CONFIG_USB_FUNCTION_ADB)		+= adb.o
 obj-$(CONFIG_USB_FUNCTION_UMS)		+= ums.o
+obj-$(CONFIG_USB_FUNCTION_MASS_STORAGE)		+= mass_storage.o
 obj-$(CONFIG_USB_FUNCTION_DIAG)		+= diag.o
 obj-$(CONFIG_USB_FUNCTION_ETHER)	+= ether.o
