[ARM] msm: clock: Adding ondemand cpufreq scaling.
Signed-off-by: Mike Chan <mike@android.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1087,7 +1087,7 @@ endmenu
 
 menu "CPU Power Management"
 
-if (ARCH_SA1100 || ARCH_INTEGRATOR || ARCH_OMAP || ARCH_IMX || ARCH_PXA)
+if (ARCH_SA1100 || ARCH_INTEGRATOR || ARCH_OMAP || ARCH_IMX || ARCH_PXA || ARCH_MSM)
 
 source "drivers/cpufreq/Kconfig"
 
