--- a/drivers/mmc/host/Kconfig
+++ b/drivers/mmc/host/Kconfig
@@ -212,3 +212,11 @@ config MMC_MSM7X00A
 	help
 	  This provides support for the SD/MMC cell found in the
           MSM 7X00A controllers from Qualcomm.
+
+config MMC_MSM7X00A_RESUME_IN_WQ
+	bool "Perform MMC resume in work-queue (EXPERIMENTAL)"
+        depends on EXPERIMENTAL && MMC_MSM7X00A
+	default n
+	help
+	  This forces msm host-controller driver to perform
+          the majority of its resume-work in a work-queue.
