msm_fb: Added new driver for MDDI type 2 panel
New MDDI client driver is added to configure MDDI
type 2 panel from Orise.

Change-Id: I2ff43af46c71691ac67a9838ed0a1b5cc53404d2
Signed-off-by: Neeraj Kumar <c_neekum@quicinc.com>

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2224,6 +2224,12 @@ config FB_MSM_MDDI_TOSHIBA_COMMON_VGA
 	select FB_MSM_MDDI_TOSHIBA_COMMON
 	default n
 
+config FB_MSM_MDDI_ORISE
+	depends on FB_MSM_MDDI_2
+	bool
+	select FB_MSM_MDDI
+	default n
+
 config FB_MSM_MDDI_AUTO_DETECT
 	bool
 	select FB_MSM_MDDI
