--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -866,5 +866,12 @@ config NPA_REMOTE_ONCRPC
 	  Enables Linux NPA clients to talk to NPA nodes in the modem
 	  using ONCRPC communication protocol.
 
+config MSM_SPM
+	bool "Subsystem Power Manager"
+	depends on ARCH_MSM7X30
+	default y
+	help
+	  Enables support for the subsystem power manager.
+
 endif
 
