msm_fb: Minor spelling mistake in Kconfig.
remove spelling mistake in selecting OVERLAY in Kconfig

Change-Id: If98ca7f988781f3a4416d46e84fa16a3a3540803
Signed-off-by: Abhishek Kharbanda <akharban@quicinc.com>

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2198,7 +2198,7 @@ config FB_MSM_OVERLAY
 	default n
 
 config FB_MSM_DTV
-	depends on FB_MSM_OVERALY
+	depends on FB_MSM_OVERLAY
 	bool
 	default n
 
