msm: Kconfig: add MACH_QSD8X55_SURF and MACH_QSD8X55_FFA
The CONFIG options are needed to generate correct machine_is_xxx
macros for 8X55 machines.

Change-Id: I713532802e225118717f9e304866964fe612d9d6
Signed-off-by: Willie Ruan <wruan@quicinc.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -207,6 +207,22 @@ config MACH_MSM7X25_FFA
 	help
 	  Support for the Qualcomm MSM7x25 FFA eval board.
 
+config MACH_QSD8X55_SURF
+       depends on ARCH_MSM7X30
+       depends on !MSM_STACKED_MEMORY
+       default y
+       bool "QSD8X55 SURF"
+       help
+         Support for the Qualcomm QSD8x55 SURF eval board.
+
+config MACH_QSD8X55_FFA
+       depends on ARCH_MSM7X30
+       depends on !MSM_STACKED_MEMORY
+       default y
+       bool "QSD8X55 FFA"
+       help
+         Support for the Qualcomm QSD8x55 FFA eval board.
+
 endmenu
 
 config MSM_STACKED_MEMORY
